# inventory-processing

./: README.md  docker-compose.yml  pyproject.toml
app/controllers/: application_controller.rb
app/javascript/: application.js
app/views/inventory_units/: _form.html.erb
inventory-app/: Dockerfile  Gemfile
inventory-app/app/controllers/: inventory_units_controller.rb
inventory-app/app/helpers/: inventory_units_helper.rb
inventory-app/app/models/: batch_stats.rb  inventory_unit.rb
inventory-app/app/views/inventory_units/: _form.html.erb  _inventory_unit.html.erb  _inventory_unit.json.jbuilder  edit.html.erb  index.html.erb  index.json.jbuilder  new.html.erb  show.html.erb  show.json.jbuilder
inventory-app/app/views/layouts/: application.html.erb
inventory-app/config/: application.rb  credentials.yml.enc  deploy.yml  mongoid.yml  routes.rb
inventory-app/config/environments/: development.rb
inventory-app/lib/: request_logger.rb
inventory-app/lib/tasks/: mongoid.rake
inventory-app/test/controllers/: inventory_units_controller_test.rb
inventory-app/test/fixtures/: inventory_units.yml
inventory-app/test/system/: inventory_units_test.rb
inventory-processing-py/: .flake8  .gitignore  README.md  integration-exercise.py  inventory_export.csv  main.py  processed_inventory.csv
inventory-processing-py/inventory_processing/: api_helper.py  inventory.py  object_utils.py  s3_helper.py  stream_lines_utils.py  utils.py
inventory_processing/: file_utils.py  inventory.py  object_utils.py  s3_helper.py  utils.py
(+1 files in other folders)
