[tool.poetry]
name = "inventory-processing"
version = "0.1.0"
description = ""
authors = ["Florencia Comuzzi <florenciabsalinas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.38.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
